Change icon on index page.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -77,6 +77,10 @@
     <div class="container d-flex">
       <small class="mr-auto p-2 text-muted">&copy; 2020 Rafael Daniel Schlatter. Licensed under the terms of the <a
           href="https://github.com/rafaelschlatter/strava-heatmap/blob/master/LICENSE.txt">MIT license.</a></small>
+      <small class="mr-auto p-2 text-muted">
+        <div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a
+            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      </small>
       <small class="p-2 text-muted"><a href="https://github.com/rafaelschlatter"><i class="fa fa-github fa-lg"
             style="color:#91979e;" title="GitHub"></i></a></small>
       <small class="p-2 text-muted"><a href="https://www.strava.com/athletes/24969674"><i class="fab fa-strava fa-lg"
