--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,12 +4,7 @@
 <div class="jumbotron jumbotron-fluid">
   <fiv class="row">
     <div class="col-6 mx-auto col-md-4 text-center order-md-2">
-      <svg class="bi bi-map" width="6em" height="6em" viewBox="0 0 16 19" fill="currentColor"
-        xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd"
-          d="M15.817.613A.5.5 0 0116 1v13a.5.5 0 01-.402.49l-5 1a.502.502 0 01-.196 0L5.5 14.51l-4.902.98A.5.5 0 010 15V2a.5.5 0 01.402-.49l5-1a.5.5 0 01.196 0l4.902.98 4.902-.98a.5.5 0 01.415.103zM10 2.41l-4-.8v11.98l4 .8V2.41zm1 11.98l4-.8V1.61l-4 .8v11.98zm-6-.8V1.61l-4 .8v11.98l4-.8z"
-          clip-rule="evenodd" />
-      </svg>
+      <img src="{{ url_for('static',filename='track.svg') }}" style="width:90px;height:120px;" />
     </div>
 
     <div class="col-md-8 order-md-1 text-center text-md-left pr-md-5">
