Added favicon to site.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/e97a1d5899.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/custom.css') }}">
+  <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/209/runner_1f3c3.png">
 </head>
 
 <body>
