--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
       <p style="font-size:18px" class="text-muted">I use this small website to host my <span
           style="color: #fff">personal activity heatmap</span>, based on my <span style="color: #fff">Strava
           data</span>.
-        The map is updated once a day at midnight, which is more than enough for a hobby athlete like me &#128512
+        The map is interactive (you can zoom and move around) and contains all my public activities since late 2017, colored by activity type &#128512
       </p>
       <br>
       <p>
