--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,8 +32,7 @@
     <img class="rounded-circle" src="https://stravastatic.blob.core.windows.net/static/close-up.PNG"
       alt="Generic placeholder image" width="135" height="135" style="border:10px solid white">
     <h5>Want to create your own heatmap?</h5>
-    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut
-      id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    <p>If you are a Strava user, then you can map your activities as well. The button below will launch a notebook at <a href="https://mybinder.org/">mybinder.org</a>, with instructions on how to create your own heatmap (coming soon).</p>
     <p><a class="btn btn-outline-primary" href="#" role="button">View tutorial <span><svg class="bi bi-arrow-right"
             width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
