--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -6,7 +6,7 @@
 <p>Feel free to leave any kind of message, comments, critics, improvements. I appreciate all feedback. You can also open
   pull requests and issues on GitHub.</p>
 
-<div class="card mb-4 shadow-sm">
+<div class="card mb-4 shadow">
   <div class="card-body">
     <form action="" method="post" role="form">
       {{ form.csrf }}
