Added github interaction buttons to index.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,8 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/e97a1d5899.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/custom.css') }}">
-  <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/209/runner_1f3c3.png">
+  <link rel="icon"
+    href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/209/runner_1f3c3.png">
 </head>
 
 <body>
@@ -35,7 +36,8 @@
               <a class="nav-link" href="{{ url_for('heatmap.heatmap') }}">Map</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Tutorial</a>
+              <a class="nav-link"
+                href="https://colab.research.google.com/github/rafaelschlatter/strava-heatmap/blob/master/examples/make_your_own.ipynb">Tutorial</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
