--- a/app/static/styles/custom.css
+++ b/app/static/styles/custom.css
@@ -27,6 +27,7 @@ body {
   padding-left: 130rem;
   margin-right: -130rem;
   padding-right: 130rem;
+  margin-bottom: 0;
   color: #fff;
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
 }
@@ -48,4 +49,15 @@ hr {
   color: #c7c7c7;
   background-color: #c7c7c7;
   border: none;
+}
+
+.github-bar {
+  margin-left: -130rem;
+  padding-left: 130rem;
+  margin-right: -130rem;
+  padding-right: 130rem;
+  margin-bottom: 2rem;
+  background-color: #f6f8fa;
+  vertical-align: center;
+  line-height: 48px;
 }
