Remove fork button.

--- a/app/static/styles/custom.css
+++ b/app/static/styles/custom.css
@@ -58,6 +58,6 @@ hr {
   padding-right: 130rem;
   margin-bottom: 2rem;
   background-color: #f6f8fa;
-  vertical-align: center;
+  vertical-align: middle;
   line-height: 48px;
 }
