--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('index.index') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -74,6 +74,7 @@
 
     {% block flash %}{% endblock %}
   </main>
+  <br>
 
   <footer class="footer">
     <br>
@@ -84,12 +85,12 @@
         <div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a
             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
       </small>
-      <small class="p-2 text-muted"><a href="https://github.com/rafaelschlatter"><i class="fa fa-github fa-lg"
-            style="color:#91979e;" title="GitHub"></i></a></small>
-      <small class="p-2 text-muted"><a href="https://www.strava.com/athletes/24969674"><i class="fab fa-strava fa-lg"
-            style="color:#91979e;" title="Strava"></i></a></small>
+      <small class="p-2 text-muted"><a href="https://github.com/rafaelschlatter"><i
+            class="fa icon fa-github fa-lg"></i></a></small>
+      <small class="p-2 text-muted"><a href="https://www.strava.com/athletes/24969674"><i
+            class="fab icon fa-strava fa-lg"></i></a></small>
       <small class="p-2 text-muted"><a href="https://www.linkedin.com/in/rafaelschlatter/"><i
-            class="fa fa-linkedin fa-lg" style="color:#91979e;" title="LinkedIn"></i></a></small>
+            class="fa icon fa-linkedin fa-lg"></i></a></small>
     </div>
     <br>
   </footer>
@@ -104,6 +105,16 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function () {
+      $(".dropdown, .btn-group").hover(function () {
+        var dropdownMenu = $(this).children(".dropdown-menu");
+        if (dropdownMenu.is(":visible")) {
+          dropdownMenu.parent().toggleClass("open");
+        }
+      });
+    });		
+  </script>
 </body>
 
 </html>
