Remove storage account dependency in css."

--- a/app/static/styles/custom.css
+++ b/app/static/styles/custom.css
@@ -23,7 +23,7 @@ body {
 }
 
 .jumbotron {
-  background-image: url('https://stravastatic.blob.core.windows.net/static/Capture_blur.jpg');
+  background-image: url('Capture_blur.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
