--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -3,8 +3,8 @@
 {% block content %}
 <br>
 <h2 class="cover-heading">I'd love to hear from you</h2>
-<p class="text-muted">Feel free to leave any kind of message, questions, comments, critics or improvements. I appreciate all
-  feedback. You can also open pull requests and issues on GitHub.</p>
+<p class="text-muted">Feel free to leave any kind of message, questions, comments, critics or improvements. I appreciate
+  all feedback. You can also open pull requests and issues on GitHub.</p>
 <br>
 
 <div class="card mb-4 shadow">
