Forgot one blob storage reference.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,7 @@
 
 <div class="row, text-center">
   <div>
-    <img class="rounded-circle" src="https://stravastatic.blob.core.windows.net/static/close-up.PNG"
+    <img class="rounded-circle" src="{{ url_for('static',filename='close-up.PNG') }}"
       alt="Generic placeholder image" width="135" height="135" style="border:10px solid white">
     <h5>Want to create your own heatmap?</h5>
     <p class="text-muted">If you are a Strava user, then you can map your activities as well. The button below will
